# govdocs-api

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  requirements.txt  sg-lang poetry.txt
.gitlab/: auto-deploy-values.yaml
backend/: Dockerfile  pyproject.toml  server.py
src/govdocs_api/: server.py  test.html
src/govdocs_api/administrative/: admin.py
src/govdocs_api/message-broker/: consumer.py  producer.py
src/govdocs_api/models/: gotocr.py  marker.py  olmocr.py  rolmocr.py  smoldocling.py  tesseract.py
src/govdocs_api/pdfs/: view.md
src/govdocs_api/supabase/: db_functions.py
src/govdocs_api/supabase/.ipynb_checkpoints/: db_functions-checkpoint.py
src/govdocs_api/utilities/: caching.py  pdf_utilities.py  types.py
supabase/: config.toml
supabase/migrations/: 20250313195944_govdoc_files.sql  20250324005804_app_users.sql  20250325000000_ia_bucket.sql
tests/: Marker.ipynb  OlmOCR_batch_test.ipynb  Untitled.ipynb  User_profiles.ipynb
tests/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
