[tool.poetry]
name = "govdocs-api"
version = "0.1.0"
description = "Govdocs OCR and LLM evaluation api"
authors = ["Furquan Hassan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "<4.0,>=3.11"
fastapi = {extras = ["standard"], version = "^0.115.8"}
pytesseract = "^0.3.13"
transformers = "^4.48.0"
huggingface-hub = ">=0.8.1,<0.29.1"
pydantic = "^2.10.6"
redis-om = "^0.3.3"
uvicorn = {version = "0.34.0", extras = ["standard"]}
gunicorn = "23.0.0"
jinja2 = "3.1.6"
olmocr = "^0.1.58"
opencv-python = "^4.11.0.86"
pdf2image = "^1.17.0"
pika = "^1.3.2"
marker-pdf = "^1.6.1"
pypdf = "^5.3.1"
torch = { version = "2.5.1", source = "pytorch" }
torchvision = { version = "0.20.1", source = "pytorch" }
torchaudio = { version = "2.5.1", source = "pytorch" }
docling-core = "^2.23.3"
ipykernel = "^6.29.5"
sentencepiece = "^0.2.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
